--- a/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/app.component.html
+++ b/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/app.component.html
@@ -19,10 +19,19 @@
             >Lista urządzeń</a
           >
         </li>
-
         <li class="nav-item">
           <a role="button" class="nav-link" (click)="navigateToProfile()"
             >Profil</a
+          >
+        </li>
+        <li class="nav-item">
+          <a role="button" class="nav-link" (click)="navigateToExpensesPlannerList()"
+            >Planer wydatków</a
+          >
+        </li>
+        <li class="nav-item">
+          <a role="button" class="nav-link" (click)="navigateToNewExpensesPlanner()"
+            >Dodaj nowy wydatek</a
           >
         </li>
       </ul>
@@ -42,6 +51,16 @@
         <li class="nav-item">
           <a role="button" class="nav-link" (click)="navigateToProfile()"
             >Profil</a
+          >
+        </li>
+        <li class="nav-item">
+          <a role="button" class="nav-link" (click)="navigateToExpensesPlannerList()"
+            >Planer wydatków</a
+          >
+        </li>
+        <li class="nav-item">
+          <a role="button" class="nav-link" (click)="navigateToNewExpensesPlanner()"
+            >Dodaj nowy wydatek</a
           >
         </li>
         <li class="nav-item">
