--- a/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/expense-planner-list/expense-planner-list.component.html
+++ b/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/expense-planner-list/expense-planner-list.component.html
@@ -15,13 +15,16 @@
       />
     </div>
   </div>
-
+<div class="table-responsive">
   <table class="table table-bordered">
     <thead class="text-center">
       <tr>
         <th>Planowana data</th>
         <th>Opis</th>
-        <th>Cena brutto</th>
+        <th>Cena netto PLN</th>
+        <th>Cena brutto PLN</th>
+        <th>Netto</th>
+        <th>Brutto</th>
         <th>Lokalizacja</th>
         <th>Podatek</th>
         <th>Nr urządzenia</th>
@@ -34,12 +37,15 @@
       <tr *ngFor="let expense of expenses">
         <td>{{ expense.plannedDate | date:'yyyy-MM-dd' }}</td>
         <td>{{ expense.description }}</td>
-        <td>{{ expense.grossPrice | number:'1.2-2' }} PLN</td>
+        <td>{{ expense.netPricePLN | currency:'PLN':'symbol':'1.2-2' }}</td>
+        <td>{{ expense.grossPricePLN | currency:'PLN':'symbol':'1.2-2' }}</td>
+        <td>{{ expense.currency !== 'PLN' ? (expense.netPrice | number:'1.2-2') + ' ' + expense.currency : '' }}</td>
+        <td>{{ expense.currency !== 'PLN' ? (expense.grossPrice | number:'1.2-2') + ' ' + expense.currency : '' }}</td>
         <td>{{ expense.storageLocationName }}</td>
         <td>{{ expense.tax | number:'1.2-2' }} PLN</td>
         <td>{{ expense.device?.identificationNumber }}</td>
-        <td>{{ expense.device?.storageLocation }}</td>
-        <td>{{ expense.service?.serviceName }}</td>
+        <td>{{ expense.device?.storageLocation?.trim().length ? expense.device.storageLocation : '-' }}</td>
+        <td>{{ expense.service?.serviceName?.trim().length ? expense.service.serviceName : '-' }}</td>
         <td>
           <div class="btn-group" role="group">
             <button
@@ -59,6 +65,7 @@
       </tr>
     </tbody>
   </table>
+  </div>
 
   <p class="no-data" *ngIf="expenses.length === 0">
     Brak wydatków za rok {{ selectedYear }}
