Changes to frontend and linking ExpensesPlanner in removing Model by ModelId

--- a/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/expense-planner-list/expense-planner-list.component.html
+++ b/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/expense-planner-list/expense-planner-list.component.html
@@ -26,7 +26,7 @@
         <th>Netto</th>
         <th>Brutto</th>
         <th>Lokalizacja</th>
-        <th>Podatek</th>
+        <th>Podatek (%)</th>
         <th>Nr urządzenia</th>
         <th>Lokalizacja urządzenia</th>
         <th>Usługa</th>
@@ -42,7 +42,7 @@
         <td>{{ expense.currency !== 'PLN' ? (expense.netPrice | number:'1.2-2') + ' ' + expense.currency : '' }}</td>
         <td>{{ expense.currency !== 'PLN' ? (expense.grossPrice | number:'1.2-2') + ' ' + expense.currency : '' }}</td>
         <td>{{ expense.storageLocationName }}</td>
-        <td>{{ expense.tax | number:'1.2-2' }} PLN</td>
+        <td>{{ expense.tax }}</td>
         <td>{{ expense.device?.identificationNumber }}</td>
         <td>{{ expense.device?.storageLocation?.trim().length ? expense.device.storageLocation : '-' }}</td>
         <td>{{ expense.service?.serviceName?.trim().length ? expense.service.serviceName : '-' }}</td>
