--- a/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/expense-planner-form/expense-planner-form.component.html
+++ b/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/expense-planner-form/expense-planner-form.component.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="form-group">
-        <label>Podatek VAT:</label>
+        <label>Stawka VAT (%):</label>
         <input type="number" formControlName="tax" required />
       </div>
     </div>
