--- a/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/devices-list/devices-list.component.html
+++ b/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/devices-list/devices-list.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="successMessage" class="alert alert-success">
+  {{ successMessage }}
+</div>
+
 <div class="container">
   <h2>Lista urządzeń</h2>
   <div class="container-fluid d-flex justify-content-between p-0 mb-2">
