--- a/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/expense-planner-form/expense-planner-form.component.html
+++ b/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/expense-planner-form/expense-planner-form.component.html
@@ -69,7 +69,7 @@
       <label>Urządzenie:</label>
       <select formControlName="deviceId" required>
         <option *ngFor="let device of devices" [value]="device.deviceId">
-          {{ device.modelName }} {{ device.deviceIdentificationNumber }})
+          {{ device.modelName }} {{ device.deviceIdentificationNumber }}
         </option>
       </select>
     </div>
