--- a/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/login/login.component.html
+++ b/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/login/login.component.html
@@ -24,4 +24,7 @@
     <button type="submit" class="btn btn-primary">Zaloguj</button>
     <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
   </form>
+  <p class="text-center mt-3">
+    <a routerLink="/register">Utwórz nowe konto</a>
+  </p>
 </div>
