--- a/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/add-device/add-device.component.html
+++ b/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/add-device/add-device.component.html
@@ -258,13 +258,13 @@
         urządzeniem
       </p>
       <p-multiSelect
-        [options]="modelNameIds"
-        [(ngModel)]="selectedRelatedModelsNames"
+        [options]="deviceOptions"
+        [(ngModel)]="selectedRelatedDeviceIds"
+        [ngModelOptions]="{ standalone: true }"
         optionLabel="name"
-        placeholder="Wybierz nazwy modeli które chcesz powiązać"
-        (onChange)="onSelectionChange()"
-        [disabled]="modelInputsDisabled"
-      />
+        optionValue="id"
+        placeholder="Wybierz urządzenia do powiązania"
+        display="chip"/>
     </div>
     <div class="d-flex justify-content-end">
       <button type="submit" (click)="onSubmit()" class="btn btn-success mb-3">
