--- a/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/edit-device/edit-device/edit-device.component.html
+++ b/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/edit-device/edit-device/edit-device.component.html
@@ -242,7 +242,7 @@
                           [attr.id]="'accuracy-' + i + '-' + j"
                           type="text"
                           class="form-control col-sm-5"
-                          formControlName="accuracy"
+                          formControlName="accuracyInPercent"
                           min="0"
                           appPercentageDirective
                         />
