--- a/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/devices-list/devices-list.component.html
+++ b/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/src/app/devices-list/devices-list.component.html
@@ -53,23 +53,39 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th scope="col" class="align-middle">
-          Nazwa urządzenia
-        </th>
-        <th scope="col" class="align-middle">Producent</th>
-        <th
-          scope="col"
-          class="d-flex justify-content-between align-items-center"
-        >
-          <span class="me-2">Model</span>
+        <th>
+          <span>Nazwa urządzenia</span>
           <button
-            id="orderButtonName"
-            class="btn btn-light"
-            (click)="setOrderDirection('modelName')"
+            type="button"
+            class="btn btn-light sort-btn"
+            (click)="setOrderDirection('identificationNumber')"
+            [class.desc]="sortColumn === 'identificationNumber' && order === 'desc'"
           >
             &uarr;
           </button>
         </th>
+        <th>
+      <span>Producent</span>
+      <button
+        type="button"
+        class="btn btn-light sort-btn"
+        (click)="setOrderDirection('producer')"
+        [class.desc]="sortColumn === 'producer' && order === 'desc'"
+      >
+        &uarr;
+      </button>
+    </th>
+        <th>
+      <span>Model</span>
+      <button
+        type="button"
+        class="btn btn-light sort-btn"
+        (click)="setOrderDirection('model')"
+        [class.desc]="sortColumn === 'model' && order === 'desc'"
+      >
+        &uarr;
+      </button>
+    </th>
         <th scope="col" class="align-middle">Numer Seryjny</th>
         <th scope="col" class="align-middle">Miejsce przechowywania</th>
         <th scope="col" class="align-middle">Data ostatniej kalibracji</th>
@@ -78,13 +94,6 @@
           class="d-flex justify-content-between align-items-center"
         >
           <span class="me-2">Data kolejnej kalibracji</span>
-          <button
-            id="orderButtonDate"
-            class="btn btn-light"
-            (click)="setOrderDirection('calibrationDate')"
-          >
-            &uarr;
-          </button>
         </th>
       </tr>
     </thead>
